--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#0b1020">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Roleta de Tarefas Insanas 🎡🧪</title>
@@ -149,6 +151,7 @@
     </div>
   </div>
 </div>
+  
 
 <script>
 /* ---------------------------
